--- a/micro-settings.json
+++ b/micro-settings.json
@@ -26,7 +26,7 @@
     "keymenu": false,
     "linter": true,
     "literate": true,
-    "matchbrace": true,
+    "matchbrace": false,
     "mkparents": false,
     "mouse": true,
     "paste": true,
@@ -37,7 +37,7 @@
     "readonly": false,
     "rmtrailingws": false,
     "ruler": true,
-    "savecursor": true,
+    "savecursor": false,
     "savehistory": true,
     "saveundo": true,
     "scrollbar": false,
