--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,11 +10,15 @@ bind-key C-a send-prefix
 bind | split-window -h
 bind - split-window -v
 
-# switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# switch windows using alt-arrow without prefix
+bind -n M-Left previous-window
+bind -n M-Right next-window
+
+# switch panes using Ctrl-arrow without prefix
+bind -n C-Left select-pane -L
+bind -n C-Right select-pane -R
+bind -n C-Up select-pane -U
+bind -n C-Down select-pane -D
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
@@ -44,7 +48,7 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # The modes 
 setw -g clock-mode-colour colour135
