--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,22 +50,16 @@ set-option -g bell-action none
 
 set -g default-terminal "screen-256color"
 
-# The modes 
+# The modes
 setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
+setw -g mode "fg=colour196,bg=colour238,attr=bold"
 
-# The panes 
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+# The panes
+set -g pane-border "fg=colour238,bg=colour235"
+set -g pane-active-border "fg=colour51,bg=colour236"
 
 # The statusbar
-set -g status-attr dim
-set -g status-bg colour234
-set -g status-fg colour137
+set -g status "fg=colour137,bg=colour234,attr=dim"
 set -g status-interval 1
 set -g status-justify left
 set -g status-left ""
@@ -75,24 +69,16 @@ set -g status-right "#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=c
 set -g status-right-length 50
 
 # window status
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
+setw -g window-status-current "fg=colour81,bg=colour238,attr=bold"
 setw -g window-status-current-format " #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F "
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
+setw -g window-status "fg=colour138,bg=colour235,attr=none"
 setw -g window-status-format " #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F "
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style "fg=colour255,bg=colour1,attr=bold"
 
 # The messages
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
+set -g message-style "fg=colour232,bg=colour166,attr=bold"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
