--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,14 +52,14 @@ set -g default-terminal "screen-256color"
 
 # The modes
 setw -g clock-mode-colour colour135
-setw -g mode "fg=colour196,bg=colour238,attr=bold"
+setw -g mode-style "fg=colour196,bg=colour238,attr=bold"
 
 # The panes
-set -g pane-border "fg=colour238,bg=colour235"
-set -g pane-active-border "fg=colour51,bg=colour236"
+set -g pane-border-style "fg=colour238,bg=colour235"
+set -g pane-active-border-style "fg=colour51,bg=colour236"
 
 # The statusbar
-set -g status "fg=colour137,bg=colour234,attr=dim"
+set -g status-style "fg=colour137,bg=colour234,attr=dim"
 set -g status-interval 1
 set -g status-justify left
 set -g status-left ""
@@ -69,16 +69,16 @@ set -g status-right "#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=c
 set -g status-right-length 50
 
 # window status
-setw -g window-status-current "fg=colour81,bg=colour238,attr=bold"
+setw -g window-status-current-style "fg=colour81,bg=colour238,attr=bold"
 setw -g window-status-current-format " #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F "
 
-setw -g window-status "fg=colour138,bg=colour235,attr=none"
+setw -g window-status-style "fg=colour138,bg=colour235,attr=none"
 setw -g window-status-format " #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F "
 
-setw -g window-status-bell-style "fg=colour255,bg=colour1,attr=bold"
+setw -g window-status-bell-style-style "fg=colour255,bg=colour1,attr=bold"
 
 # The messages
-set -g message-style "fg=colour232,bg=colour166,attr=bold"
+set -g message-style-style "fg=colour232,bg=colour166,attr=bold"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
